# cosentus-voice-enginev2

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/voice-agent/app/: main.py
backend/voice-agent/app/bot/: __init__.py  bot.py  intelligence.py  lifecycle.py
backend/voice-agent/app/config/: __init__.py  agent_config.py  payer_knowledge.py  settings.py
backend/voice-agent/app/flows/: __init__.py  identity_gate.py  scaffold.py  steps.py  summary.py
backend/voice-agent/app/hydration/: hydrator.py
backend/voice-agent/app/knowledge/: __init__.py  fixtures.py  interfaces.py  live.py  prefetch.py  semantic_cache.py
backend/voice-agent/app/observability/: __init__.py  tracing.py
backend/voice-agent/app/observers/: __init__.py  error_observer.py  error_state.py  metrics_observer.py  transcript_observer.py  usage_accumulator.py
backend/voice-agent/app/persistence/: __init__.py  call_record.py  call_writer.py  post_call.py  transcript.py
backend/voice-agent/app/runner/: daily_rooms.py  manager.py  server.py
backend/voice-agent/app/services/: factory.py
backend/voice-agent/app/tools/: __init__.py  context.py  executor.py  registry.py  result.py  schema.py
backend/voice-agent/app/tools/builtin/: __init__.py  catalog.py  end_call.py  press_digit.py  transfer_call.py
backend/voice-agent/evals/: __init__.py
backend/voice-agent/evals/promptfoo/: __init__.py  promptfooconfig.yaml  render_transcript.py
backend/voice-agent/evals/promptfoo/cases/: claim_status_denied.json  claim_status_disconnected_retry_needed.json  claim_status_missing_reference.json  claim_status_no_claim_found.json  claim_status_paid.json  claim_status_payer_refuses_info.json  claim_status_pending.json  claim_status_transferred_to_claims.json  ivr_digits_pending.json  ivr_hold_paid.json  (+1 more)
backend/voice-agent/scripts/: README.md  scale_test.py  staging_load_test.py  walking_skeleton.py
backend/voice-agent/scripts/wave6/: __init__.py  cloudwatch.py  config.py  ecs.py  http_caller.py  report.py  scenario_a.py  scenario_b.py  scenario_base.py  scenario_c.py  scenario_d.py  scenario_e.py
backend/voice-agent/tests/: test_main.py
backend/voice-agent/tests/bot/: test_bot.py  test_intelligence.py  test_lifecycle.py
backend/voice-agent/tests/config/: test_agent_config.py  test_payer_knowledge.py  test_settings.py
backend/voice-agent/tests/evals/: test_promptfoo_eval_assets.py
backend/voice-agent/tests/flows/: test_identity_gate.py  test_scaffold.py  test_steps.py  test_summary.py
backend/voice-agent/tests/hydration/: test_hydrator.py
backend/voice-agent/tests/knowledge/: test_interfaces.py  test_live.py  test_prefetch.py  test_semantic_cache.py
backend/voice-agent/tests/observability/: test_tracing.py
backend/voice-agent/tests/observers/: test_error_observer.py  test_transcript_observer.py  test_usage_accumulator.py
backend/voice-agent/tests/persistence/: test_call_record.py  test_call_writer.py  test_post_call.py  test_transcript.py
backend/voice-agent/tests/runner/: test_daily_rooms.py  test_manager.py  test_server.py
backend/voice-agent/tests/services/: test_factory.py  test_llm_failover.py  test_model_contract.py  test_prompt_caching.py
backend/voice-agent/tests/tools/: test_disabled_tools_parser.py  test_executor.py  test_function_call_context_lifecycle.py  test_registry.py  test_schema.py
docs/: test-call-guide.md  v2-tech-debt-log.md  wave7-design.md
infrastructure/: .env.example  .gitignore  README.md  cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/lambdas/voice-api-stub/: handler.py
infrastructure/src/: config.ts  main.ts  ssm-parameters.ts
infrastructure/src/constructs/: alb.ts  ecs-service.ts  index.ts  recordings-bucket.ts  secrets.ts  vpc.ts
infrastructure/src/stacks/: compute-stack.ts  ecr-stack.ts  index.ts  network-stack.ts  storage-stack.ts  voice-api-stub-stack.ts
(+3 files in other folders)
