[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosentus-voice-engine"
version = "0.1.0"
description = "Cosentus voice agent platform engine — Pipecat pipeline running on AWS Fargate, Daily PSTN, AssemblyAI STT, ElevenLabs TTS, AWS Bedrock LLM."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Cosentus" },
]
license = { text = "Proprietary" }

# v2 ships on Pipecat 1.x from day one. v1 is pinned to 0.0.108 in
# production; that pin exists because v1 accumulated patches against
# the 0.0.x API and migration to 1.x has breaking changes v1 hasn't
# absorbed. v2 is greenfield — no inherited patches — so we start on
# the current stable line.
dependencies = [
    # Pinned EXACTLY to 1.1.0 — the version validated across Wave 6
    # (scale tests, soak tests, every working real PSTN call). pipecat
    # 1.2.x changed the ElevenLabs TTS WebSocket protocol handling and
    # breaks our voice_settings config with a 1008 "voice_settings must
    # be provided in the first message and then not change" error
    # (caught 2026-05-28 on the prod PSTN smoke; see tech-debt entry 20).
    # Do NOT widen this back to a range without re-validating TTS end to
    # end against the new version. The Dockerfile also installs from
    # uv.lock with --frozen so a stray range can't silently drift again.
    "pipecat-ai[daily,silero,elevenlabs,aws,webrtc,runner,assemblyai]==1.1.0",
    # Pipecat Flows — structured-conversation layer over the pipeline
    # (EPIC #16; scaffold #41). Pinned EXACTLY to 1.1.1: it requires
    # pipecat-ai<2,>=1.0.0, so it's compatible with — and does NOT widen
    # — the 1.1.0 pin above. The next release (1.2.0) requires
    # pipecat-ai>=1.3.0, which would force-bump pipecat off 1.1.0 and
    # re-break ElevenLabs TTS; the exact pin keeps that from drifting in
    # via uv.lock. Re-validate before widening, same as pipecat-ai.
    "pipecat-ai-flows==1.1.1",
    "boto3",
    "pydantic>=2",
    "pydantic-settings>=2.0",
    "fastapi",
    "uvicorn",
    "structlog",
    "aiohttp",
    # Per-call tracing (#13). Standalone OpenTelemetry — we deliberately
    # do NOT use Pipecat's own tracer (its GenAI spans embed PHI:
    # messages / transcript / system_instructions, with no suppression
    # flag), so the pipecat-ai[tracing] extra is intentionally absent and
    # the pin above is untouched. We emit our own PHI-free spans plus a
    # metrics observer through this SDK and export OTLP/HTTP to
    # self-hosted Langfuse. opentelemetry-api comes in transitively.
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-aiohttp",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["backend/voice-agent"]
include = ["app*"]

[tool.ruff]
extend-exclude = ["infrastructure"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Pipecat defaults everywhere — we only deviate from upstream Pipecat
# style when there's a Cosentus reason. Start with the conventional
# Python set and expand as patterns emerge.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["backend/voice-agent/tests"]
pythonpath = ["backend/voice-agent"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    # Pipecat 1.1.0 imports the stdlib ``audioop`` module which is
    # deprecated in Python 3.12 and slated for removal in 3.13. The
    # warning fires at Pipecat-import time. We don't use audioop
    # ourselves; trust Pipecat to migrate before 3.13 lands.
    "ignore:'audioop' is deprecated:DeprecationWarning",
]
